--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* ==============================================
+/* ==========================================
          style.css 
-=====================≈======================== */
+===================≈======================== */
 
 /* =========================================
    🏆 قائمة Top 5 الحية تحت اللعبة
